--- a/cog.yaml
+++ b/cog.yaml
@@ -12,5 +12,6 @@ build:
     - "requests==2.32.3"
   run:
     - curl -fsSL https://ollama.com/install.sh | OLLAMA_VERSION=0.3.13 sh
+    - curl -o /usr/local/bin/pget -L "https://github.com/replicate/pget/releases/download/v0.8.2/pget_linux_x86_64" && chmod +x /usr/local/bin/pget
 
 predict: "predict.py:Predictor"
